sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_input_struct_not_secret.stderr
error[E0277]: the trait bound `MyTotallySecretStructTrustMe: pbc_zk_core::SecretBinaryFixedSize` is not satisfied
  --> tests/pbc_contract_codegen/fail/zk/secret_input_struct_not_secret.rs:22:1
   |
22 | #[zk_on_secret_input(shortname = 0x04, secret_type = "MyTotallySecretStructTrustMe")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `pbc_zk_core::SecretBinaryFixedSize` is not implemented for `MyTotallySecretStructTrustMe`
   |
   = help: the following other types implement trait `pbc_zk_core::SecretBinaryFixedSize`:
             bool
             pbc_zk_core::sbi::Sbi<i8>
             pbc_zk_core::sbi::Sbi<i16>
             pbc_zk_core::sbi::Sbi<i32>
             pbc_zk_core::sbi::Sbi<i64>
             pbc_zk_core::sbi::Sbi<i128>
note: required by a bound in `ContractResultBuffer::write_zk_input_def_result`
  --> $WORKSPACE/pbc_contract_common/src/result_buffer.rs
   |
   |     pub fn write_zk_input_def_result<
   |            ------------------------- required by a bound in this associated function
   |         MetadataT: ReadWriteState,
   |         SecretT: SecretBinary + SecretBinaryFixedSize,
   |                                 ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ContractResultBuffer::write_zk_input_def_result`
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)
